fix up navigation, add scroll overflow, and make stacking explicit

--- a/src/assets/styles/navigation.css
+++ b/src/assets/styles/navigation.css
@@ -1,4 +1,3 @@
 .twr-navigation {
   @apply twr-relative twr-flex twr-p-4 twr-shadow-2xl twr-rounded-2xl;
-  min-width: min-content;
 }
